Fixed spacing bug, uncommented most parts + 1 more
Adjusted some spacing

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
 }
 
 .wideBox h1{
+    margin: 0;
     color: #333333;
 }
 
@@ -48,6 +49,7 @@ body{
 .triBox{
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
     width: 33%;
     margin: 10px;
     padding: 10px;
